--- a/tgbotcpp/config.json
+++ b/tgbotcpp/config.json
@@ -1,6 +1,7 @@
 {
   "token": "5851994307:AAG3kJSDiqbXWdOX1XzD63D17n3l2Aziyos",
-  "help": "C:/Users/andre/Documents/tgbotcpp/help.txt",
-  "input": "C:/Users/andre/Documents/tgbotcpp/input.txt",
-  "output": "C:/Users/andre/Documents/tgbotcpp/output.txt"
+  "help": "C:/Users/andre/code_dealers/tgbotcpp/help.txt",
+  "input": "C:/Users/andre/code_dealers/tgbotcpp/input.txt",
+  "output": "C:/Users/andre/code_dealers/tgbotcpp/output.txt",
+  "loc": "C:/Users/andre/code_dealers/tgbotcpp/loc.txt"
 }
