--- a/tgbotcpp/config.json
+++ b/tgbotcpp/config.json
@@ -1,5 +1,5 @@
 {
     "token": "5851994307:AAG3kJSDiqbXWdOX1XzD63D17n3l2Aziyos",
     "help": "Hello! Here is a list of availible commands:\n\/help - shows this list\n\/weather - real-time weather display",
-    "loc": "C:\\Users\\Sokoban\\code_dealers\\tgbotcpp\\loc.txt"
+    "loc": "C:\\Users\\andre\\code_dealers\\tgbotcpp\\loc.txt"
 }
